src/z80asm/z80asm2/t/20-preproc/expected/mmu_01.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/mmu_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/20-preproc/input/mmu_01.asm...
t/20-preproc/input/mmu_01.asm:1:1: error: MMU not supported on z80
    mmu 0, A
    ^
t/20-preproc/input/mmu_01.asm:2:1: error: MMU0 not supported on z80
    mmu0 A
    ^
t/20-preproc/input/mmu_01.asm:3:1: error: MMU1 not supported on z80
    mmu1 A
    ^
t/20-preproc/input/mmu_01.asm:4:1: error: MMU2 not supported on z80
    mmu2 A
    ^
t/20-preproc/input/mmu_01.asm:5:1: error: MMU3 not supported on z80
    mmu3 A
    ^
t/20-preproc/input/mmu_01.asm:6:1: error: MMU4 not supported on z80
    mmu4 A
    ^
t/20-preproc/input/mmu_01.asm:7:1: error: MMU5 not supported on z80
    mmu5 A
    ^
t/20-preproc/input/mmu_01.asm:8:1: error: MMU6 not supported on z80
    mmu6 A
    ^
t/20-preproc/input/mmu_01.asm:9:1: error: MMU7 not supported on z80
    mmu7 A
    ^
t/20-preproc/input/mmu_01.asm:10:1: error: MMU not supported on z80
    mmu 0, 0
    ^
t/20-preproc/input/mmu_01.asm:11:1: error: MMU0 not supported on z80
    mmu0 0
    ^
t/20-preproc/input/mmu_01.asm:12:1: error: MMU1 not supported on z80
    mmu1 0
    ^
t/20-preproc/input/mmu_01.asm:13:1: error: MMU2 not supported on z80
    mmu2 0
    ^
t/20-preproc/input/mmu_01.asm:14:1: error: MMU3 not supported on z80
    mmu3 0
    ^
t/20-preproc/input/mmu_01.asm:15:1: error: MMU4 not supported on z80
    mmu4 0
    ^
t/20-preproc/input/mmu_01.asm:16:1: error: MMU5 not supported on z80
    mmu5 0
    ^
t/20-preproc/input/mmu_01.asm:17:1: error: MMU6 not supported on z80
    mmu6 0
    ^
t/20-preproc/input/mmu_01.asm:18:1: error: MMU7 not supported on z80
    mmu7 0
    ^
